--- a/notebooks/model.ipynb
+++ b/notebooks/model.ipynb
@@ -16,7 +16,8 @@
         "from sklearn import svm\n",
         "from sklearn.metrics import accuracy_score\n",
         "import seaborn as sns\n",
-        "import matplotlib.pyplot as plt"
+        "import matplotlib.pyplot as plt\n",
+        "from sklearn.impute import SimpleImputer"
       ]
     },
     {
